fix: center title on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -14,7 +14,7 @@ body {
 
 .site-title {
   display: inline-block;
-  margin-right: 30px;
+  margin-right: 10px;
   margin-left: 10px;
   font-weight: bold;
 }
